--- a/login.html
+++ b/login.html
@@ -39,6 +39,6 @@
     <div class="login">
         <img src="images/movies.png" id="movie">
     </div>
-    
+    <h1>Sample Check</h1>
 </body>
 </html>
