--- a/login.html
+++ b/login.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,15 +17,15 @@
     <h1>LOGIN</h1>
     <hr>
     <br>
-    <form>
+    <form id="login-Form">
         <table class="center">
             <tr>
-                <td><label for="username">Username or E-mail : </label></td>
-                <td><input type="text" name="username" id="username"></td>
+                <td><label for="userName">Username or E-mail : </label></td>
+                <td><input type="text" name="username" id="userName"></td>
             </tr>
             <tr>
-                <td><label for="Passwd">Password : </label></td>
-                <td><input type="password" name="passwd" id="passwd"></td>
+                <td><label for="passWord">Password : </label></td>
+                <td><input type="password" name="passWord" id="passWord"></td>
             </tr>
             <tr>
                 <td></td>
@@ -39,6 +40,6 @@
     <div class="login">
         <img src="images/movies.png" id="movie">
     </div>
-    <h1>hii</h1>
+    <script src="script.js"></script>
 </body>
 </html>
