--- a/note.html
+++ b/note.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,11 +17,11 @@
     <h1>INPUT FORM</h1>
     <hr>
     <br>
-    <form>
+    <form id="note-Form">
         <table class="center">
             <tr>
                 <td><label for="notes">Enter Notes here : </label></td>
-                <td><input type="text" name="notes" id="notes"></td>
+                <td><input type="text" name="notes" id="takeNotes"></td>
             </tr>
         </table>
        <br>
@@ -64,6 +65,6 @@
             </p>
           </div>  
     </section>
-    
+    <script src="script.js"></script>
 </body>
 </html>
