--- a/register.html
+++ b/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,23 +16,23 @@
     <div>
     <h1>REGISTER</h1>
     <hr>
-    <form>
+    <form id="register-Form">
         <table class="center">
             <tr>
-                <td><label for="firstname">First Name : </label></td>
-                <td><input type="text"></td>
+                <td><label for="firstName">First Name : </label></td>
+                <td><input type="text" id="firstName"></td>
             </tr>
             <tr>
-                <td><label for="lastname">Last Name : </label></td>
-                <td><input type="text"></td>
+                <td><label for="lastName">Last Name : </label></td>
+                <td><input type="text" id="lastName"></td>
             </tr>
             <tr>
-                <td><label for="email">E-Mail : </label></td>
-                <td><input type="text"></td>
+                <td><label for="eMail">E-Mail : </label></td>
+                <td><input type="text" id="eMail"></td>
             </tr>
             <tr>
-                <td><label for="passwd">Password : </label></td>
-                <td><input type="password"></td>
+                <td><label for="passWord">Password : </label></td>
+                <td><input type="password" id="passWord"></td>
             </tr>
             
             <tr>
@@ -50,5 +51,6 @@
         <p>Film critics and film studies scholars typically define an art film as possessing "formal qualities that mark them as different from mainstream Hollywood films". These qualities can include (among other elements): a sense of social realism; an emphasis on the authorial expressiveness of the director; and a focus on the thoughts, dreams, or motivations of characters, as opposed to the unfolding of a clear, goal-driven story. Film scholar David Bordwell describes art cinema as "a film genre, with its own distinct conventions".</p>
         <p>Art film producers usually present their films at special theaters (repertory cinemas or, in the U.S., art-house cinemas) and at film festivals. The term art film is much more widely used in North America, the United Kingdom, and Australia, compared to mainland Europe, where the terms auteur films and national cinema (e.g. German national cinema) are used instead. Since they are aimed at small, niche-market audiences, art films rarely acquire the financial backing that would permit large production budgets associated with widely released blockbuster films. Art film directors make up for these constraints by creating a different type of film, one that typically uses lesser-known film actors (or even amateur actors), and modest sets to make films that focus much more on developing ideas, exploring new narrative techniques, and attempting new film-making conventions.</p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
