--- a/register.html
+++ b/register.html
@@ -31,6 +31,10 @@
                 <td><input type="text" id="eMail"></td>
             </tr>
             <tr>
+                <td><label for="Username">New Username : </label></td>
+                <td><input type="text" id="uname"></td>
+            </tr>
+            <tr>
                 <td><label for="passWord">Password : </label></td>
                 <td><input type="password" id="passWord"></td>
             </tr>
