--- a/note.html
+++ b/note.html
@@ -34,7 +34,7 @@
     <section class="flexbox2">
             <!-- photo 1 -->
           <div class="photo">
-            <img src="images/interstellar.jpg" alt="interstellar">
+            <img src="Public/images/interstellar.jpg" alt="interstellar">
             <h3>Interstellar</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat molestiae dolorum quis eos excepturi, officiis incidunt. Accusamus animi velit, labore, vitae similique nulla tempora repellendus necessitatibus ipsum molestias delectus!
@@ -42,7 +42,7 @@
           </div>
           <!-- photo 2 -->
           <div class="photo">
-            <img src="images/pulpfiction.jpg" alt="pulpfiction">
+            <img src="0/images/pulpfiction.jpg" alt="pulpfiction">
             <h3>Pulp Fiction</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat molestiae dolorum quis eos excepturi, officiis incidunt. Accusamus animi velit, labore, vitae similique nulla tempora repellendus necessitatibus ipsum molestias delectus!
@@ -50,7 +50,7 @@
           </div>
           <!-- photo 3 -->
           <div class="photo">
-            <img src="images/parasite.jpg" alt="parasite">
+            <img src="Public/images/parasite.jpg" alt="parasite">
             <h3>Parasite</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat molestiae dolorum quis eos excepturi, officiis incidunt. Accusamus animi velit, labore, vitae similique nulla tempora repellendus necessitatibus ipsum molestias delectus!
@@ -58,7 +58,7 @@
           </div>
           <!-- photo 4 -->
           <div class="photo">
-            <img src="images/departed.jpg" alt="departed">
+            <img src="Public/images/departed.jpg" alt="departed">
             <h3>The Departed</h3>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui placeat molestiae dolorum quis eos excepturi, officiis incidunt. Accusamus animi velit, labore, vitae similique nulla tempora repellendus necessitatibus ipsum molestias delectus!
