--- a/login.html
+++ b/login.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="./Public/styles/Style.css">
 </head>
 <body>
     <div class="flexbox">
-        <div><a href="login.html">Login</a></div>
-        <div><a href="register.html">Register</a></div>
-        <div><a href="note.html">Input Notes</a></div>
+        <div><a href="./Public/login.html">Login</a></div>
+        <div><a href="./Public/register.html">Register</a></div>
+        <div><a href="./Public/note.html">Input Notes</a></div>
     </div>
     <div>
     <h1>LOGIN</h1>
@@ -33,12 +33,12 @@
             </tr>
         </table> 
     </form>
-    <p>New Member? <a href="register.html">Register Here</a></p>
+    <p>New Member? <a href="./Public/register.html">Register Here</a></p>
     <hr>
     <h2>Do you like movies?</h2>
     </div>
     <div class="login">
-        <img src="images/movies.png" id="movie">
+        <img src="Public/images/movies.png" id="movie">
     </div>
     <script src="script.js"></script>
 </body>
