--- a/Public/login.html
+++ b/Public/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="styles/Style.css">
 </head>
 <body>
     <div class="flexbox">
@@ -33,7 +33,7 @@
             </tr>
         </table> 
     </form>
-    <p>New Member? <a href="register.html">Register Here</a></p>
+    <p>New Member? <a href="./Public/register.html">Register Here</a></p>
     <hr>
     <h2>Do you like movies?</h2>
     </div>
