--- a/Public/login.html
+++ b/Public/login.html
@@ -34,12 +34,13 @@
         </table> 
     </form>
     <p>New Member? <a href="./Public/register.html">Register Here</a></p>
+    <button id="users-btn">Get Users</button>
     <hr>
-    <h2>Do you like movies?</h2>
     </div>
-    <div class="login">
-        <img src="images/movies.png" id="movie">
-    </div>
+
+    <section id="hii"></section>
     <script src="script.js"></script>
+
+
 </body>
 </html>
