--- a/Public/login.html
+++ b/Public/login.html
@@ -38,7 +38,7 @@
     <hr>
     </div>
 
-    <section id="hii"></section>
+    <section id="userprint"></section>
     <script src="script.js"></script>
 
 
