--- a/Public/note.html
+++ b/Public/note.html
@@ -28,6 +28,10 @@
         
         <input type="submit" value="Submit"><br>
     </form>
+
+    <button id="notes-btn">Get Users</button>
+    <section id="noteprint"></section>
+
     <hr>
     <h2>My Favourite movies</h2>
     </div>
