--- a/Public/note.html
+++ b/Public/note.html
@@ -69,6 +69,7 @@
             </p>
           </div>  
     </section>
-    <script src="script.js"></script>
+    <script src="scriptnote.js"></script>
+    
 </body>
 </html>
