--- a/Public/note.html
+++ b/Public/note.html
@@ -29,7 +29,8 @@
         <input type="submit" value="Submit"><br>
     </form>
 
-    <button id="notes-btn">Get Users</button>
+    <button id="notes-btn">Get Notes</button>
+    
     <section id="noteprint"></section>
 
     <hr>
@@ -69,7 +70,7 @@
             </p>
           </div>  
     </section>
-    <script src="script.js"></script>
+    <script src="scriptn.js"></script>
     
 </body>
 </html>
