--- a/Public/login.html
+++ b/Public/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="#">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles/Style.css">
 </head>
@@ -19,6 +20,7 @@
     <br>
     <form id="login-Form">
         <table class="center">
+            <p class="error"></p>
             <tr>
                 <td><label for="userName">Username or E-mail : </label></td>
                 <td><input type="text" name="username" id="userName"></td>
@@ -34,13 +36,14 @@
         </table> 
     </form>
     <p>New Member? <a href="./Public/register.html">Register Here</a></p>
-    <button id="users-btn">Get Users</button>
+    <!--<button id="users-btn">Get Users</button>-->
     <hr>
     </div>
 
     <section id="userprint"></section>
-    <script src="script.js"></script>
-
+    <script type="module" src="main.js"></script>
+    <script type ="module" src="script.js"></script>
+    
 
 </body>
 </html>
