--- a/Public/note.html
+++ b/Public/note.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="#">
     <title>Notes</title>
     <link rel="stylesheet" href="styles/Style.css">
 </head>
@@ -19,6 +20,7 @@
     <br>
     <form id="note-Form">
         <table class="center">
+          <p class="error"></p>
             <tr>
                 <td><label for="notes">Enter Notes here : </label></td>
                 <td><input type="text" name="notes" id="takeNotes"></td>
@@ -70,7 +72,8 @@
             </p>
           </div>  
     </section>
-    <script src="scriptn.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="scriptn.js"></script>
     
 </body>
 </html>
