--- a/Public/login.html
+++ b/Public/login.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td><label for="passWord">Password : </label></td>
-                <td><input type="password" name="passWord" id="passWord"></td>
+                <td><input type="password" name="passWord" id="password"></td>
             </tr>
             <tr>
                 <td></td>
