--- a/Public/register.html
+++ b/Public/register.html
@@ -53,13 +53,13 @@
 
     
 
-    <h2>Art in the movies</h2>
+    <!-- <h2>Art in the movies</h2>
     </div>
     <div class="reg">
         <p>An art film (or art house film) is typically an independent film, aimed at a niche market rather than a mass market audience. It is "intended to be a serious, artistic work, often experimental and not designed for mass appeal", "made primarily for aesthetic reasons rather than commercial profit", containing "unconventional or highly symbolic content".</p>
         <p>Film critics and film studies scholars typically define an art film as possessing "formal qualities that mark them as different from mainstream Hollywood films". These qualities can include (among other elements): a sense of social realism; an emphasis on the authorial expressiveness of the director; and a focus on the thoughts, dreams, or motivations of characters, as opposed to the unfolding of a clear, goal-driven story. Film scholar David Bordwell describes art cinema as "a film genre, with its own distinct conventions".</p>
         <p>Art film producers usually present their films at special theaters (repertory cinemas or, in the U.S., art-house cinemas) and at film festivals. The term art film is much more widely used in North America, the United Kingdom, and Australia, compared to mainland Europe, where the terms auteur films and national cinema (e.g. German national cinema) are used instead. Since they are aimed at small, niche-market audiences, art films rarely acquire the financial backing that would permit large production budgets associated with widely released blockbuster films. Art film directors make up for these constraints by creating a different type of film, one that typically uses lesser-known film actors (or even amateur actors), and modest sets to make films that focus much more on developing ideas, exploring new narrative techniques, and attempting new film-making conventions.</p>
-    </div>
+    </div> -->
     <script type="module" src="main.js"></script>
     <script type="module" src="script.js"></script>
 </body>
