--- a/Public/login.html
+++ b/Public/login.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <div class="flexbox">
-        <div><a href="login.html">Login</a></div>
+        <nav></nav>
+        <!-- <div><a href="login.html">Login</a></div>
         <div><a href="register.html">Register</a></div>
-        <div><a href="note.html">Input Notes</a></div>
+        <div><a href="note.html">Input Notes</a></div> -->
     </div>
     <div>
     <h1>LOGIN</h1>
