minor styling changes

--- a/Public/login.html
+++ b/Public/login.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="styles/Style.css">
 </head>
 <body>
-    <div class="flexbox">
-        <nav></nav>
         <!-- <div><a href="login.html">Login</a></div>
         <div><a href="register.html">Register</a></div>
         <div><a href="note.html">Input Notes</a></div> -->
-    </div>
+    <header>
+        <nav></nav>
+    </header>
     <div>
+    <hr>
     <h1>LOGIN</h1>
     <hr>
     <br>
