--- a/Public/note.html
+++ b/Public/note.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="styles/Style.css">
 </head>
 <body>
-    <div class="flexbox">
+    <header>
       <nav></nav>
+    </header>
         <!-- <div><a href="login.html">Login</a></div>
         <div><a href="register.html">Register</a></div>
         <div><a href="note.html">Input Notes</a></div> -->
-    </div>
-    <div>
+        </div>
+        <div>
+
+        <hr>
     <h1>INPUT FORM</h1>
     <hr>
     <br>
@@ -30,6 +33,7 @@
        <br>
         
         <input type="submit" value="Submit"><br>
+        <hr>
         
     </form>
 
