--- a/Public/register.html
+++ b/Public/register.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="styles/Style.css">
 </head>
 <body>
-    <div class="flexbox">
+    <header>
         <nav></nav>
+    </header>
         <!-- <div><a href="login.html">Login</a></div>
         <div><a href="register.html">Register</a></div>
         <div><a href="note.html">Input Notes</a></div> -->
     </div>
     <div>
+        <hr>
     <h1>REGISTER</h1>
     <hr>
     <form id="register-Form">
